Add technical files

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>validationprofileparser</module>
+        <module>modelimplementation</module>
     </modules>
 
     <packaging>pom</packaging>
