Validation report model. In this version location of the check contains only "level".

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>validationprofileparser</module>
+        <module>validationlogic</module>
     </modules>
 
     <packaging>pom</packaging>
