some auto generating fields values for validation report model

--- a/validationlogic/pom.xml
+++ b/validationlogic/pom.xml
@@ -14,6 +14,14 @@
     <artifactId>validationlogic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         <!-- Mozilla Rhino JavaScript engine -->
         <dependency>
@@ -34,6 +42,13 @@
             <artifactId>validationprofileparser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>pdfmodel</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
