Small fixes and rewriting implementation classes and id generator

--- a/modelimplementation/pom.xml
+++ b/modelimplementation/pom.xml
@@ -18,6 +18,14 @@
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+        <repository>
+            <id>ApacheSnapshot</id>
+            <name>Apache Repository</name>
+            <url>https://repository.apache.org/content/groups/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
