--- a/validationlogic/pom.xml
+++ b/validationlogic/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.verapdf</groupId>
+            <groupId>org.verapdf</groupId>
             <artifactId>validationprofileparser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
