--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,17 +13,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.verapdf</groupId>
+            <groupId>org.verapdf</groupId>
             <artifactId>modelimplementation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.verapdf</groupId>
+            <groupId>org.verapdf</groupId>
             <artifactId>validationprofileparser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.verapdf</groupId>
+            <groupId>org.verapdf</groupId>
             <artifactId>validationlogic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
