--- a/modelimplementation/pom.xml
+++ b/modelimplementation/pom.xml
@@ -28,7 +28,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.pdfbox</groupId>
+            <groupId>org.verapdf.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
