--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
 
     <build>
         <plugins>
+	    <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <configuration>
+                    <programs>
+                        <program>
+                            <mainClass>org.verapdf.gui.PDFValidationApplication</mainClass>
+                            <name>VeraPDF validation GUI</name>
+                        </program>
+                    </programs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
