--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <java.version>1.7</java.version>
         <guava.version>18.0</guava.version>
         <maven.failsafe.version>2.18.1</maven.failsafe.version>
+        <maven.surefire.version>2.18.1</maven.surefire.version>
+        <maven.exec.version>1.4.0</maven.exec.version>
     </properties>
 
     <distributionManagement>
@@ -51,6 +53,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -68,22 +71,13 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven.failsafe.version}</version>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>verify</id>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*IT.java</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -113,6 +107,100 @@
                         </executions>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>clone-test-resources</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>exec-maven-plugin</artifactId>
+                            <version>${maven.exec.version}</version>
+                            <executions>
+                                <execution>
+                                    <id>download test files</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <executable>git</executable>
+                                        <workingDirectory>target/test-classes/test-resources</workingDirectory>
+                                        <arguments>
+                                            <argument>clone</argument>
+                                            <argument>https://github.com/veraPDF/veraPDF-corpus-PDFA-1b</argument>
+                                        </arguments>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>download validation profiles</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <executable>git</executable>
+                                        <workingDirectory>target/test-classes/test-resources</workingDirectory>
+                                        <arguments>
+                                            <argument>clone</argument>
+                                            <argument>https://github.com/veraPDF/veraPDF-validation-profiles</argument>
+                                        </arguments>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <id>update-test-resources</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>exec-maven-plugin</artifactId>
+                            <version>${maven.exec.version}</version>
+                            <executions>
+                                <execution>
+                                    <id>update test files</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <executable>git</executable>
+                                        <workingDirectory>
+                                            target/test-classes/test-resources/veraPDF-corpus-PDFA-1b
+                                        </workingDirectory>
+                                        <arguments>
+                                            <argument>pull</argument>
+                                        </arguments>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>update validation profiles</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <executable>git</executable>
+                                        <workingDirectory>
+                                            target/test-classes/test-resources/veraPDF-validation-profiles
+                                        </workingDirectory>
+                                        <arguments>
+                                            <argument>pull</argument>
+                                        </arguments>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
