--- a/core/pom.xml
+++ b/core/pom.xml
@@ -78,6 +78,10 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                     </plugin>
+                    <plugin>
+                        <groupId>com.googlecode.maven-download-plugin</groupId>
+                        <artifactId>download-maven-plugin</artifactId>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
