Added html report generator. Added get all id of rules function to profile model. Fixed that now we see unchecked rules in report as passed (previously they had not been in the report).

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>validationprofileparser</module>
         <module>validationlogic</module>
+        <module>validationreport</module>
         <module>modelimplementation</module>
         <module>core</module>
         <module>cli</module>
