--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>validationlogic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>validationreport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>xmlunit</groupId>
