--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 
         <dependency>
             <groupId>org.verapdf</groupId>
+            <artifactId>validationreport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.verapdf</groupId>
             <artifactId>modelimplementation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
