Added version label into about panel and version property for it.

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,28 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/*.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
+
+    <properties>
+        <version>0.0.0</version>
+    </properties>
 
     <dependencies>
 
