Added a fail never to Maven call.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jdk:
   - oraclejdk7
 
 install:
-  - mvn clean install -P clone-test-resources
+  - mvn clean install --fail-never -P clone-test-resources
