--- a/modelimplementation/pom.xml
+++ b/modelimplementation/pom.xml
@@ -30,12 +30,17 @@
         <dependency>
             <groupId>org.verapdf.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>${verapdf.pdfbox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.verapdf.pdfbox</groupId>
+            <artifactId>xmpbox</artifactId>
+            <version>${verapdf.pdfbox.version}</version>
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
             <artifactId>pdfmodel</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${verapdf.model.version}</version>
         </dependency>
 
         <dependency>
