--- a/validationlogic/pom.xml
+++ b/validationlogic/pom.xml
@@ -47,6 +47,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>verapdfexceptions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
