--- a/validationprofileparser/pom.xml
+++ b/validationprofileparser/pom.xml
@@ -13,18 +13,18 @@
     <artifactId>validationprofileparser</artifactId>
 
     <dependencies>
-        <!-- Mozilla Rhino JavaScript engine -->
-        <dependency>
-            <groupId>rhino</groupId>
-            <artifactId>js</artifactId>
-            <version>1.7R2</version>
-        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>verapdfexceptions</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
