--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,31 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>http://jenkins.opf-labs.org/userContent/MVP-resources.zip</url>
+                            <unpack>true</unpack>
+                            <outputDirectory>${project.build.directory}/appassembler</outputDirectory>
+                            <md5>e3aa0b78dc4ecc870eb5daf65f6cf59f</md5>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.5.4</version>
                 <executions>
                     <execution>
-                        <id>${project.name}-zip</id>
+                        <id>${project.id}-zip</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
@@ -86,7 +105,7 @@
                     </execution>
                 </executions>
             </plugin>
-                </plugins>
+        </plugins>
 
         <resources>
             <resource>
