Added gui module.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>modelimplementation</module>
         <module>core</module>
         <module>cli</module>
+        <module>gui</module>
     </modules>
 
     <properties>
