--- a/modelimplementation/pom.xml
+++ b/modelimplementation/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>pdfmodel</artifactId>
             <version>${verapdf.model.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>verapdfexceptions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
