--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -4,15 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>oss-parent</artifactId>
-        <groupId>org.sonatype.oss</groupId>
-        <version>7</version>
+        <artifactId>verapdf-library</artifactId>
+        <groupId>org.verapdf</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.verapdf</groupId>
-    <artifactId>veraPDF-library-GUI</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <artifactId>gui</artifactId>
     <name>VeraPDF Library GUI</name>
 
     <distributionManagement>
