Added OpenJDK 7 and Oracle JDK 8 to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 
 jdk:
+  - openjdk7
   - oraclejdk7
+  - oraclejdk8
 
 install:
   - mvn clean install --fail-never -P clone-test-resources
