--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>core</module>
         <module>cli</module>
         <module>gui</module>
+        <module>featurereport</module>
     </modules>
 
     <properties>
