--- a/validationreport/pom.xml
+++ b/validationreport/pom.xml
@@ -42,6 +42,12 @@
 
         <dependency>
             <groupId>org.verapdf</groupId>
+            <artifactId>featurereport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.verapdf</groupId>
             <artifactId>pdfmodel</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
