--- a/validationprofileparser/pom.xml
+++ b/validationprofileparser/pom.xml
@@ -7,24 +7,24 @@
     <parent>
         <groupId>org.verapdf</groupId>
         <artifactId>verapdf-library</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>validationprofileparser</artifactId>
+    <artifactId>validation-profile-parser</artifactId>
+    <name>veraPDF Validation Profile Parser</name>
+    <description>Parser for veraPDF Validation Profiles that encode PDF/A validation rules.<description>
 
     <dependencies>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>verapdfexceptions</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>verapdf-exceptions</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
