--- a/validationlogic/pom.xml
+++ b/validationlogic/pom.xml
@@ -7,51 +7,45 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>validationlogic</artifactId>
-
-    <repositories>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-
+    <artifactId>validation-logic</artifactId>
+    <name>veraPDF Validation Logic</name>
+    <description>Algorithms and logic for veraPDF PDF/A Validation</description>
 
     <dependencies>
-        <!-- Mozilla Rhino JavaScript engine -->
-        <dependency>
-            <groupId>rhino</groupId>
-            <artifactId>js</artifactId>
-            <version>1.7R2</version>
-        </dependency>
+      <!-- Mozilla Rhino JavaScript engine -->
+      <dependency>
+          <groupId>rhino</groupId>
+          <artifactId>js</artifactId>
+          <version>1.7R2</version>
+      </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+          <scope>test</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>org.verapdf</groupId>
-            <artifactId>validationprofileparser</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+      <dependency>
+          <groupId>org.verapdf</groupId>
+          <artifactId>pdf-model</artifactId>
+          <version>[0.1.0-SNAPSHOT,0.2.0)</version>
+      </dependency>
 
-        <dependency>
-            <groupId>org.verapdf</groupId>
-            <artifactId>pdfmodel</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+      <dependency>
+          <groupId>org.verapdf</groupId>
+          <artifactId>verapdf-exceptions</artifactId>
+          <version>${project.version}</version>
+      </dependency>
 
-        <dependency>
-            <groupId>org.verapdf</groupId>
-            <artifactId>verapdfexceptions</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+      <dependency>
+          <groupId>org.verapdf</groupId>
+          <artifactId>validation-profile-parser</artifactId>
+          <version>${project.version}</version>
+      </dependency>
 
     </dependencies>
 
