--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,37 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>core</artifactId>
+    <name>veraPDF Library core</name>
+    <description>Core classes for the veraPDF Library.</description>
 
     <dependencies>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>modelimplementation</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>model-implementation</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationprofileparser</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-logic</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationlogic</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-report</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationreport</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>verapdf-exceptions</artifactId>
+            <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
