--- a/featurereport/pom.xml
+++ b/featurereport/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>featurereport</artifactId>
+    <artifactId>feature-report</artifactId>
+    <name>veraPDF Library PDF Features Reporting</name>
+    <description>Reports features extracted from a PDF document.</description>
 
     <dependencies>
         <dependency>
@@ -25,8 +27,8 @@
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>verapdfexceptions</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>verapdf-exceptions</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
