--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gui</artifactId>
@@ -127,31 +127,31 @@
         <dependency>
             <groupId>org.verapdf</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationprofileparser</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-profile-parser</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationlogic</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-logic</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationreport</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-report</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>modelimplementation</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>model-implementation</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
