--- a/validationreport/pom.xml
+++ b/validationreport/pom.xml
@@ -2,56 +2,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>validationreport</artifactId>
-
-    <repositories>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-
+    <artifactId>validation-report</artifactId>
+    <name>veraPDF PDF/A Validation Reporting</name>
+    <description>Generates reports on results of the veraPDF validation process.</description>
 
     <dependencies>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationprofileparser</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>pdf-model</artifactId>
+            <version>${verapdf.model.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validationlogic</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-profile-parser</artifactId>
+            <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>featurereport</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>validation-logic</artifactId>
+            <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>pdfmodel</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>feature-report</artifactId>
+            <version>${project.version}</version>
         </dependency>
-
     </dependencies>
 
 </project>
