Added POM name and description.

--- a/verapdf-exceptions/pom.xml
+++ b/verapdf-exceptions/pom.xml
@@ -11,4 +11,6 @@
   </parent>
 
   <artifactId>verapdf-exceptions</artifactId>
+  <name>veraPDF Library Exceptions</name>
+  <description>veraPDF Library defined exceptions.</description>
 </project>
