Fixes for integration tests : 1) clone integration branch of profiles repo 2) fixed test set 3) fixed logger 4) added total and failed properties to TestSetReport 5) Fix for ModelLoader related to closed streams

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,8 @@
                                         <workingDirectory>target/test-classes/test-resources</workingDirectory>
                                         <arguments>
                                             <argument>clone</argument>
+                                            <argument>-b</argument>
+                                            <argument>integration</argument>
                                             <argument>https://github.com/veraPDF/veraPDF-validation-profiles</argument>
                                         </arguments>
                                     </configuration>
