Fixed bat generation.

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -40,6 +40,8 @@
                             <name>VeraPDF validation GUI</name>
                         </program>
                     </programs>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <useWildcardClassPath>true</useWildcardClassPath>
                 </configuration>
                 <executions>
                     <execution>
