--- a/verapdf-exceptions/pom.xml
+++ b/verapdf-exceptions/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
 
   <artifactId>verapdf-exceptions</artifactId>
