--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.verapdf</groupId>
         <artifactId>verapdf-library</artifactId>
-        <version>0.2.0</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>vera-cli</artifactId>
