--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>0.2.0</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gui</artifactId>
