--- a/validation-logic/pom.xml
+++ b/validation-logic/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>0.2.0</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>validation-logic</artifactId>
@@ -32,7 +32,7 @@
       <dependency>
           <groupId>org.verapdf</groupId>
           <artifactId>pdf-model</artifactId>
-          <version>0.3.1</version>
+          <version>${verapdf.model.version}</version>
       </dependency>
 
       <dependency>
