Fixes for Sonar issues:  - added sonar server details to POM;  - added hashCode to FeatureTreeNode;  - improved FeatureTreeNode equals;  - indentation improvements;  - enforced use of string constants;  - removed unnecessary else statements;  - using equalsignorecase() where appropriate; and  - restructured equals calls to avoid nulls.

--- a/pom.xml
+++ b/pom.xml
@@ -593,5 +593,17 @@
       </build>
     </profile>
 
+    <profile>
+      <id>sonar</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <sonar.host.url>
+          http://sonar.opf-labs.org
+        </sonar.host.url>
+      </properties>
+    </profile>
+
   </profiles>
 </project>
